# NanoBuild

./: CMakeLists.txt  LICENSE  README.md  res.rc
src/: block.cpp  block.h  main.cpp  other.cpp  other.h  player.cpp  player.h  structures.cpp  structures.h
